# test_messenger

./: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  wait_for_db.sh
app/: app_test.py  config.py  database.py  dependencies.py  dependencies.py~  exceptions.py  lifespan.py  logging_decorator.py  main.py  models.py
app/auth/schemas/: __init__.py  schemas.py
app/auth/utils/: __init__.py  auth_work.py
app/auth/views/: __init__.py  auth_views.py
app/chats/: __init__.py  pagination.py  schemas.py  utils.py  views.py
app/chats/__pycache__/: schemas.cpython-311.pyc.2130580908640  schemas.cpython-311.pyc.2365455001920  schemas.cpython-311.pyc.2663239838016  utils.cpython-311.pyc.1121921984544  utils.cpython-311.pyc.2027844134944  (+2 more)
app/controllers/: __init__.py  chat_controller.py  user_controller.py  ws_controller.py
app/database/: __init__.py  database.py  database.py~  models.py  models.py~
app/repositories/: __init__.py  chat_repository.py  chat_repository.py~  user_repository.py  user_repository.py~  ws_repository.py
app/services/: __init__.py  chat_service.py  user_service.py  ws_service.py
app/users/: __init__.py  schemas.py  utils.py  views.py  views.py~
app/websocket/: connection_manager.py  handler.py  views.py
mango_test/: env.py
mango_test/versions/: 11379aa802ab_.py  2e52e8625aeb_.py  46dfa3e04884_.py  81dbd89ce632_.py  a8160c7b8f4e_.py  a8bd41c80e09_.py  ac90ec0e6087_.py  ac9eaa020b5c_.py  b489ba53ad86_complete_data_base.py  cceaf997c3b0_.py  d46f0f19885e_.py  ddd0012f876a_.py  dfe863506398_.py  f150ba772cc1_create_initial_tables.py  fb7e08400c5f_.py
(+25 files in other folders)
